Materialize launcher settings

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -127,4 +127,10 @@
         <item name="indicatorSize">4dp</item>
         <item name="ringOutset">4dp</item>
     </style>
+
+    <style name="Settings" parent="@android:style/Theme.Material.Light.DarkActionBar">
+        <item name="android:colorPrimary">@color/settings_action_bar_color</item>
+        <item name="android:colorPrimaryDark">@color/settings_status_bar_color</item>
+        <item name="android:colorAccent">@color/launcher_accent_color</item>
+    </style>
 </resources>
